Pasando a factor nombre y tipo de pokemon.

--- a/memoria.Rmd
+++ b/memoria.Rmd
@@ -139,6 +139,9 @@ Ahora vamos a proceder a añadir la columna de tipos al dataset que hemos cargad
 ```{r}
 ds["tipo"] <- tipos[ds$class]
 ds["nombre"] <- nombres[ds$class]
+
+ds$tipo <- as.factor(ds$tipo)
+ds$nombre <- as.factor(ds$nombre)
 ```
 
 Como ya hemos dicho en nuestro dataset tenemos información que nos permite conocer la posición en la que se produjo un avistamiento. Sin embargo, cuando pintamos los avistamientos que tenían como ciudad Madrid en el atributo **city** nos encontramos lo siguiente:
@@ -232,8 +235,7 @@ Como podemos ver una vez que hemos agrupado las muestras por el tipo de Pokemon 
 Dado que el número de clases es muy grande hemos, aún habiendo agrupado por tipo de pokemon las muestras, hemos optado por quedarnos sólo con 5 clases. La elección ha sido quedarnos con las clases agua, fuego, planta, psiquíco y fantasma.
 
 ```{r}
-
-reglasGenerales <- apriori(ds[,-c(1, 2, 3, 5, 6, 8, 11, 12, 13, 14, 16, 17, 18, 19, 20, 25, 178, 179, 180)], parameter = list(support = 0.1, confidence = 0.8, minlen = 2, maxlen = 3, maxtime=300))
+reglasGenerales <- apriori(ds[,-c(1, 2, 3, 5, 6, 8, 11, 12, 13, 14, 16, 17, 18, 19, 20, 25, 178)], parameter = list(support = 0.1, confidence = 0.8, minlen = 2, maxlen = 3, maxtime=300))
 ```
 ```{r}
 inspect(reglasGenerales)
@@ -567,35 +569,6 @@ ft_rf=ft
 Pruebas con KNN
 
 ```{r}
-library(kknn)
-
-modelo = nombre ~.
-
-arbol.kknn=kknn(formula=modelo, train, test, na.action=na.omit(),k=3)
-fit=fitted(arbol.kknn)
-tt=table(fit,test$nombre)
-tt
-
-dd=diag(tt)
-bien=sum(dd)
-bien_clasificados=(bien/nrow(test))*100
-
-bien_knn=bien_clasificados
-cat("Porcentaje de bien clasificados con knn:", bien_clasificados)
-```
-
-```{r}
-set.seed(42)
-idxTrain <- createDataPartition(y = dsFiltrado$nombre, p = 0.8, list = FALSE)
-train <- dsFiltrado[idxTrain,]
-test <- dsFiltrado[-idxTrain,]
-```
-```{r}
-ctrl <- trainControl(method="repeatedcv",repeats = 1)
-knnFit <- train(nombre ~ ., data = train, method = "knn", trControl = ctrl, tuneLength = 20 )
-```
-
-```{r}
 library(e1071)
 
 mknns = tune.knn(dsFiltrado[, -135], dsFiltrado$nombre, k=1:20, tunecontrol = tune.control(sampling = "cross"), cross = 10)
@@ -604,9 +577,9 @@ mknns = tune.knn(dsFiltrado[, -135], dsFiltrado$nombre, k=1:20, tunecontrol = tu
 Con el código anterior hemos obtenido que el mejor k de entre 1 y 20 para el algoritmo de KNN en nuestro dataset es 9, probemos este parámetro:
 
 ```{r}
-modelo = nombre ~.
+library(kknn)
 
-arbol.kknn=kknn(formula=modelo, train, test, na.action=na.omit(),k=9)
+arbol.kknn = kknn(formula= nombre ~ ., train, test, na.action=na.omit(),k = 9)
 fit=fitted(arbol.kknn)
 tt=table(fit,test$nombre)
 tt
@@ -623,13 +596,8 @@ Aumenta ligeramente aunque no demasiado. No sabemos si esto se debe a emplear un
 
 ```{r}
 library(xgboost)
-trainIndex <- createDataPartition(dsFiltrado$nombre, p = .8, list = FALSE, times = 1)
-idxNombre = which(colnames(dsFiltrado) == "nombre")
 
-training <- dsFiltrado[trainIndex, -idxNombre]
-test <- dsFiltrado[-trainIndex, -idxNombre]
-
-xgb <- xgboost(data = data.matrix(training), label = dsFiltradoClaseNum[trainIndex], eta = 0.1, max_depth = 7, nround=25, subsample = 0.5, colsample_bytree = 0.5, seed = 1, eval_metric = "merror", objective = "multi:softmax", num_class = 5, nthread = 3)
+xgb <- xgboost(data = data.matrix(train[, colnames(train) != "nombre"]), label = dsFiltradoClaseNum[idxTrain], eta = 0.1, max_depth = 7, nround=25, subsample = 0.5, colsample_bytree = 0.5, seed = 1, eval_metric = "merror", objective = "multi:softmax", num_class = 5, nthread = 3)
 ```
 
 exeggcute = 0
@@ -639,7 +607,7 @@ metapod = 3
 squirtle = 4
 
 ```{r}
-y_pred <- predict(xgb, data.matrix(test))
-sum(dsFiltradoClaseNum[-trainIndex] == y_pred)/nrow(dsFiltrado)*100
+y_pred <- predict(xgb, data.matrix(test[, colnames(test) != "nombre"]))
+sum(dsFiltradoClaseNum[-idxTrain] == y_pred)/nrow(test)*100
 ```
 
