--- a/caps/analisis-exploratorio.tex
+++ b/caps/analisis-exploratorio.tex
@@ -64,6 +64,112 @@ En relación a estos datos indirectos que podemos obtener a partir de nuestro da
 
 Aquí podemos apreciar por ejemplo con en Argentina las temperaturas son bajas en agosto, y como hay una diferencia de temperatura entre el norte y el sur de Europa.
 
+Por otro lado al explorar el dataset observamos que en el atributo \textbf{appearedDayOfWeek} se tomaba el valor \textbf{dummy\_day}, y al consultar los valores que toma este atributo a lo largo del dataset vimos que no aparecia el lunes cuando el resto de los dias de la semana si que aparecen, con lo cual procedemos a revisar si este valor del atributo se corresponde con el lunes o es simplemente un valor perdido
+
+Como podemos observar el único día en el que se registran observaciones en las que el atributo toma el valor dummy\_day es el 8 de agosto que efectivamente fue un lunes. Además mientras se comprobaba este hecho hemos observado que todas las observaciones se realizaron en agosto y que además fue durante una semana de agosto, con lo cual el atributo \textbf{appearedMonth} no aporta ninguna información y además los atributos \textbf{appearedDayOfWeek} y \textbf{appearedDay} aportan la misma información, ya que al tomarse las muestras durante una sola semana hay una correspondencia biyectiva entre los valores de ambos atributos. Y como a priori no consideramos que la distancia entre días sea significativa, vamos a optar por quedarnos con el atributo categórico.
+
+Podemos comprobar también que podemos obtener los atributos sunriseMinutesMidnight y sunsetMinutesMidnight a partir de los atributos: \textbf{sunriseHour}, \textbf{sunriseMinute}, \textbf{sunsetHour} y \textbf{sunsetMinute}, con lo que procedemos a eliminar estos 4 últimos
+
+\begin{lstlisting}
+Siendo ds el dataset.
+sum(ds$sunriseMinutesMidnight == (ds$sunriseHour*60 + ds$sunriseMinute))/nrow(ds)*100
+sum(ds$sunsetMinutesMidnight == (ds$sunsetHour*60 + ds$sunsetMinute))/nrow(ds)*100
+ds <- subset(ds, select = -c(sunriseHour, sunriseMinute, sunsetHour, sunsetMinute))
+\end{lstlisting}
+
+Veamos entonces cómo se distribuyen las muestras que tenemos según el tipo de pokemon avistado:
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/tipos.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/tipos.jpg}
+\caption{Distribución de los tipos}
+\end{figure}
+
+Como podemos ver una vez que hemos agrupado las muestras por el tipo de Pokemon vemos que las clases están tremendamente desequilibradas. Mientras que hay muchísimos avistamientos de Pokemon de tipo normal, las clases hielo, dragón, fastasma, eléctrico o roca resultan marginales. Con lo cual en primer lugar hemos de realizar un equilibrado de estas clases.
+
+Aquí podemos apreciar que para cualquier tipo de pokemon la mayoría de los avistamientos se producen durante la noche. Creíamos que ibamos a apreciar una tendencia en la que los pokemon de tipo fantasma fuesen los que presentaban este comportamiento de una forma más acusada, sin embargo todos los tipos siguen este patrón de aparición.
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/noche1.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/noche1.jpg}
+\caption{Distribución de avistamientos a lo largo del dia 1}
+\end{figure}
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/noche2.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar dire2ctorios
+\label{img/noche2.jpg}
+\caption{Distribución de avistamientos a lo largo del dia 2}
+\end{figure}
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/noche3.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/noche3.jpg}
+\caption{Distribución de avistamientos a lo largo del dia 3}
+\end{figure}
+
+
+Una de las principales características de Pokemon GO, aplicación de la cual son estos datos, es la posibilidad de encontrar pokemon en cualquier parte, por ejemplo en entornos cercanos al agua. Se espera, como es natural, que la mayoría de pokemon tipo agua se encuentren en zonas cercanas al agua. Esto daría un gran grado de realismo a la aplicación. Vamos a comprobar si esto es cierto con el tipo agua y a su vez con algunos otros. 
+
+Para ello vamos a realizar una sere de gráficos.
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/cercaagua.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/cercaagua.jpg}
+\caption{Avistamientos cerca del agua}
+\end{figure}
+
+Mostramos tanto una gráfica en la que se puede ver la distribución de las muestras referentes a cada tipo según se hayan avistado cerca del agua o no y un ranking ordenado según la proporción de avistamientos cerca del agua. Así vemos que los pokemon de tipo eléctrico, dragón, agua e hielo son los que aparecen en mayor proporción cerca del agua. Por otro lado los pokemon de tipo fuego, planta, roca, normal y bicho son los que en menor proporción se presentan en zona acuosas. Nos sorprende de este análisis dos cosas: que no sean los pokemon de tipo agua los que sean más habituales en proporción en zonas acuosas y que los pokemons de tipo planta estén en menor proporción en las zonas con agua que en las zonas secas.
+
+Aquí estamos hablando de proporciones, si nos fijamos en cantidades sí son los pokemon (después de los normales) de tipo agua los que aparecen más veces cerca del agua, no obstante preferimos atender a las proporciones ya que no queremos hay que tener en cuenta que habrá unos tipo de pokemon más difíciles de encontrar que otros.
+
+Antes hemos estado discutiendo sobre los dias de las apariciones de los diferentes pokemon. Por lo que ahora vamos a ver como se distribuyen dichas apariciones a lo largo de los dias de la semana.
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/semana.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/semana.jpg}
+\caption{Avistamientos a lo largo de la semana}
+\end{figure}
+
+Podemos observar que una gran parte de los avistamientos se realizan en el fin de semana, concretamente los sábados y viernes. También se producen grandes avistamientos los miércoles y jueves, mientras que el lunes es el día que menos avistamientos se producen. Todo esto tiene sentido, ya que hemos de pensar que los datos que estamos tratando son de un video juego para móviles, por lo tanto la mayor actividad, avistamientos, se realizarán cuando los jugadores dispongan de mayor tiempo libre para jugar, fin de semana.
+
+Ahora vamos a ver como se distribuyen los tipos de los distintos pokemon avistados en el mundo.
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/tiposmundo.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/tiposmundo.jpg}
+\caption{Tipos de pokemon a lo largo del mundo}
+\end{figure}
+
+Podemos ver como no se sigue ningún tipo de distribución fija, ni podemos obtener nigún tipo de patrón atentiendo a estos datos, por lo que se puede decir que los tipos de pokemon que aparecen son aleatorios.
+
+Fijemonos en como se distrubuyen los tipos según la dirección e intensidad del viento:
+
+\begin{figure}[H] %con el [H] le obligamos a situar aquí la figura
+\centering
+\includegraphics[scale=0.8]{img/viento.jpg}  %el parámetro scale permite agrandar o achicar la imagen. En el nombre de archivo puede especificar directorios
+\label{img/viento.jpg}
+\caption{Distribución de tipos según intensidad y dirección de viento}
+\end{figure}
+
+Aunque viendo los tipos uno spor uno podríamos observar alguna tendencía hacia alguno de los cuadrantes de direcciones de viento lo cierto es que no hay una tendencia clara y podemos encontrar observaciones de cualquier tipo en cualquier dirección y las velocidades tampoco alojan mucha información, ya que la densidad de puntos en mayor para velocidades menores pero para cualquier tipo se da la misma tónica. De hecho nos hemos restringido a una área más reducida para apreciar alguna tendencia y no hemos observado nada destacable.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
