Capítulos sobre clasificación y reglas de asociación. Closes #15 and closes #16.

--- a/doc.tex
+++ b/doc.tex
@@ -77,7 +77,11 @@
 
 \section{Clasificación}
 
+\input{caps/clasificacion.tex}
+
 \section{Reglas de asociación}
+
+\input{caps/asociacion.tex}
 
 \section{Conclusiones}
 
